refactor login page

--- a/apps/general_api/template/frontend/mini.twig
+++ b/apps/general_api/template/frontend/mini.twig
@@ -1,5 +1,8 @@
-<div class="ui mini modal">
-    <div class="image content">
-        <div class="description">{{ description }}</div>
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            {{ description }}
+        </div>
     </div>
 </div>
