forgot password view

--- a/apps/general_api/template/frontend/mini.twig
+++ b/apps/general_api/template/frontend/mini.twig
@@ -1,8 +1,13 @@
-<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
      aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            {{ description }}
+            <div class="modal-body">
+                {{ description }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
