--- a/apps/forgot_password/template/forgot_password.twig
+++ b/apps/forgot_password/template/forgot_password.twig
@@ -10,13 +10,13 @@
                 <!-- Form -->
                 <div class="row">
                     <div class="col-12">
-                        <form class="form-horizontal mt-3" id="loginform">
+                        <form class="form-horizontal mt-3" id="forgot_password_form">
                             <div class="input-group mb-3">
                                 <div class="d-flex">
                                     <span class="input-group-text" id="basic-addon1"><i class="far fa-user"></i></span>
                                 </div>
                                 <input type="text"
-                                       id="tl__forgot__password__username__or__email"
+                                       id="fp__input"
                                        class="form-control form-control-lg"
                                        placeholder="{{ usernameOrPasswordPlaceholder }}"
                                        aria-label="{{ usernameOrPasswordPlaceholder }}" aria-describedby="basic-addon1"
@@ -24,7 +24,7 @@
                             </div>
                             <div class="form-group text-center">
                                 <div class="col-xs-12 pb-3">
-                                    <button id="tl__login__button" class="btn btn-block btn-lg btn-info"
+                                    <button id="fp__reset" class="btn btn-block btn-lg btn-info"
                                             type="submit">{{ resetPassword }}</button>
                                 </div>
                             </div>
