forgot password stuff

--- a/apps/forgot_password/template/forgot_email.twig
+++ b/apps/forgot_password/template/forgot_email.twig
@@ -16,9 +16,9 @@
             <tbody>
             <tr>
                 <td style="vertical-align: top; padding-bottom:30px;" align="center"><a
-                            href="{{ url }}" target="_blank"><img
-                                src="{{ logoPath }}" alt="{{ logoAlt }}"
-                                style="border:none"><br/>
+                            href="{{ url }}" target="_blank"><img height="150px"
+                                                                  src="{{ logoPath }}" alt="{{ logoAlt }}"
+                                                                  style="border:none"><br/>
                     </a></td>
             </tr>
             </tbody>
@@ -31,8 +31,9 @@
                         <p>{{ text }}</p>
                         <a href="{{ ctaLink }}"
                            style="display: inline-block; padding: 11px 30px; margin: 20px 0px 30px; font-size: 15px; color: #fff; background: {{ themeColor }}; border-radius: 60px; text-decoration:none;">
-                            {{ ctaButtonText }} </a>
-                        <b>{{ thanksText }}</b></td>
+                            {{ ctaButtonText }}
+                        </a>
+                        <br><b>{{ thanksText }}</b></td>
                 </tr>
                 </tbody>
             </table>
