--- a/apps/forgot_password/template/forgot_password.twig
+++ b/apps/forgot_password/template/forgot_password.twig
@@ -24,8 +24,12 @@
                             </div>
                             <div class="form-group text-center">
                                 <div class="col-xs-12 pb-3">
-                                    <button id="fp__reset" class="btn btn-block btn-lg btn-info"
-                                            type="submit">{{ resetPassword }}</button>
+                                    <button id="fp__reset"
+                                            class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
+                                            type="submit">
+                                        {{ resetPassword }}
+                                        <div class="spinner-border spinner-border-sm invisible" id="fp__spinner" role="status"></div>
+                                    </button>
                                 </div>
                             </div>
                             <div class="form-group mb-0 mt-2">
