--- a/apps/forgot_password/template/reset_password.twig
+++ b/apps/forgot_password/template/reset_password.twig
@@ -1,50 +1,43 @@
-{#<div class="ui container">#}
-{#    <div class="ui one column centered grid">#}
-{#        <div class="center aligned column">#}
-{#            <img id="tl__login__image" src="{{ logoPath }}">#}
-{#        </div>#}
-{#        <div class="six wide column centered">#}
-{#            <form class="ui form" id="tl__forgot__password">#}
-{#                <div id="bl__response__div"></div>#}
-{#                <div class="ui center aligned attached segment" id="form-segment">#}
-{#                    <div class="field">#}
-{#                        <label for="tl__reset__password__username">{{ userNameLabel }}</label>#}
-{#                        <input disabled id="tl__reset__password__username"#}
-{#                               name="tl__reset__password__username"#}
-{#                               placeholder="{{ usernamePlaceholder }}"#}
-{#                               readonly#}
-{#                               type="text"#}
-{#                               value="{{ userName }}"#}
-{#                        >#}
-{#                    </div>#}
-
-{#                    <div class="field">#}
-{#                        <label for="tl__reset__password__password">{{ newPasswordLabel }}</label>#}
-{#                        <input id="tl__reset__password__password" name="tl__reset__password__password"#}
-{#                               placeholder="{{ newPasswordPlaceholder }}"#}
-{#                               type="text">#}
-{#                    </div>#}
-
-{#                    <div class="field">#}
-{#                        <label for="tl__reset__password__password_repeat">{{ newPasswordRepeatLabel }}</label>#}
-{#                        <input id="tl__reset__password__password_repeat" name="tl__reset__password__password_repeat"#}
-{#                               placeholder="{{ newPasswordRepeatPlaceholder }}"#}
-{#                               type="text">#}
-{#                    </div>#}
-
-{#                </div>#}
-{#                <button class="ui bottom attached fluid button" id="tl__login__button" type="submit">{{ reset }}#}
-{#                </button>#}
-{#            </form>#}
-{#        </div>#}
-{#        <div class="center aligned column">#}
-{#            <a href="{{ backToLoginLink }}">{{ backToLogin }}</a>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
-
-{#<div class="ui mini modal" id="tl__login__modal">#}
-{#    <div class="image content">#}
-{#        <div class="description"></div>#}
-{#    </div>#}
-{#</div>#}
+<div class="main-wrapper login">
+    <div class="auth-wrapper d-flex no-block justify-content-center align-items-center"
+         style="background:url({{ backgroundPath }}) no-repeat center center;">
+        <div class="auth-box">
+            <div id="loginform">
+                <div class="logo">
+                    <span class="db"><img id="logo-image" height="30px" src="{{ logoPath }}" alt="logo"/></span>
+                    <h5 class="font-medium mb-3">{{ title }}</h5>
+                </div>
+                <!-- Form -->
+                <div class="row">
+                    <div class="col-12">
+                        <form class="form-horizontal mt-3" id="reset_password_form">
+                            <div class="input-group mb-3">
+                                <div class="d-flex">
+                                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-pen"></i></span>
+                                </div>
+                                <input type="text"
+                                       id="rp__input"
+                                       class="form-control form-control-lg"
+                                       data-token="{{ token }}"
+                                       placeholder="{{ passwordLabel }}"
+                                       aria-label="{{ passwordLabel }}" aria-describedby="basic-addon1"
+                                >
+                            </div>
+                            <div class="form-group text-center">
+                                <div class="col-xs-12 pb-3">
+                                    <button id="rp__reset"
+                                            class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
+                                            type="submit">
+                                        {{ resetPassword }}
+                                        <div class="spinner-border spinner-border-sm invisible" id="rp__spinner"
+                                             role="status"></div>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
