--- a/apps/forgot_password/template/forgot_password.twig
+++ b/apps/forgot_password/template/forgot_password.twig
@@ -7,46 +7,58 @@
                     <span class="db"><img id="logo-image" height="30px" src="{{ logoPath }}" alt="logo"/></span>
                     <h5 class="font-medium mb-3">{{ loginToApp }}</h5>
                 </div>
-                <!-- Form -->
-                <div class="row">
-                    <div class="col-12">
-                        <form class="form-horizontal mt-3" id="forgot_password_form">
-                            <div class="input-group mb-3">
-                                <div class="d-flex">
-                                    <span class="input-group-text" id="basic-addon1"><i class="far fa-user"></i></span>
+                {% if hasHash == true %}
+                    <!-- Form -->
+                    <div class="row">
+                        <div class="col-12">
+                            <form class="form-horizontal mt-3" id="forgot_password_form">
+                                <div class="input-group mb-3">
+                                    <div class="d-flex">
+                                        <span class="input-group-text" id="basic-addon1"><i
+                                                    class="far fa-user"></i></span>
+                                    </div>
+                                    <input type="text"
+                                           id="fp__input"
+                                           class="form-control form-control-lg"
+                                           placeholder="{{ usernameOrPasswordPlaceholder }}"
+                                           aria-label="{{ usernameOrPasswordPlaceholder }}"
+                                           aria-describedby="basic-addon1"
+                                    >
                                 </div>
-                                <input type="text"
-                                       id="fp__input"
-                                       class="form-control form-control-lg"
-                                       placeholder="{{ usernameOrPasswordPlaceholder }}"
-                                       aria-label="{{ usernameOrPasswordPlaceholder }}" aria-describedby="basic-addon1"
-                                >
-                            </div>
-                            <div class="form-group text-center">
-                                <div class="col-xs-12 pb-3">
-                                    <button id="fp__reset"
-                                            class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
-                                            type="submit">
-                                        {{ resetPassword }}
-                                        <div class="spinner-border spinner-border-sm invisible" id="fp__spinner" role="status"></div>
-                                    </button>
+                                <div class="form-group text-center">
+                                    <div class="col-xs-12 pb-3">
+                                        <button id="fp__reset"
+                                                class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
+                                                type="submit">
+                                            {{ resetPassword }}
+                                            <div class="spinner-border spinner-border-sm invisible" id="fp__spinner"
+                                                 role="status"></div>
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group mb-0 mt-2">
-                                <div class="col-sm-12 text-center">
-                                    {{ createNewAccountText }} <a href="{{ newAccountLink }}" target="_blank"
-                                                                  class="text-info ml-1"><b>{{ createNewAccountActionText }}</b></a>
-                                </div>
-                                <div class="col-sm-12 text-center">
-                                    <a href="{{ backToLoginLink }}"
-                                       class="text-info ml-1"><b>{{ backToLogin }} </b></a>
-                                </div>
+                                <div class="form-group mb-0 mt-2">
+                                    <div class="col-sm-12 text-center">
+                                        {{ createNewAccountText }} <a href="{{ newAccountLink }}" target="_blank"
+                                                                      class="text-info ml-1"><b>{{ createNewAccountActionText }}</b></a>
+                                    </div>
+                                    <div class="col-sm-12 text-center">
+                                        <a href="{{ backToLoginLink }}"
+                                           class="text-info ml-1"><b>{{ backToLogin }} </b></a>
+                                    </div>
 
-                            </div>
-                        </form>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                </div>
+                {% else %}
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center">
+                            <h5 class="font-medium mb-3">{{ noHashFound }}</h5>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
 </div>
+
