--- a/apps/forgot_password/template/reset_password.twig
+++ b/apps/forgot_password/template/reset_password.twig
@@ -7,36 +7,46 @@
                     <span class="db"><img id="logo-image" height="30px" src="{{ logoPath }}" alt="logo"/></span>
                     <h5 class="font-medium mb-3">{{ title }}</h5>
                 </div>
-                <!-- Form -->
-                <div class="row">
-                    <div class="col-12">
-                        <form class="form-horizontal mt-3" id="reset_password_form">
-                            <div class="input-group mb-3">
-                                <div class="d-flex">
-                                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-pen"></i></span>
+                {% if hasHash == true %}
+                    <!-- Form -->
+                    <div class="row">
+                        <div class="col-12">
+                            <form class="form-horizontal mt-3" id="reset_password_form">
+                                <div class="input-group mb-3">
+                                    <div class="d-flex">
+                                        <span class="input-group-text" id="basic-addon1"><i
+                                                    class="fas fa-pen"></i></span>
+                                    </div>
+                                    <input type="text"
+                                           id="rp__input"
+                                           class="form-control form-control-lg"
+                                           data-token="{{ token }}"
+                                           placeholder="{{ passwordLabel }}"
+                                           aria-label="{{ passwordLabel }}" aria-describedby="basic-addon1"
+                                    >
                                 </div>
-                                <input type="text"
-                                       id="rp__input"
-                                       class="form-control form-control-lg"
-                                       data-token="{{ token }}"
-                                       placeholder="{{ passwordLabel }}"
-                                       aria-label="{{ passwordLabel }}" aria-describedby="basic-addon1"
-                                >
-                            </div>
-                            <div class="form-group text-center">
-                                <div class="col-xs-12 pb-3">
-                                    <button id="rp__reset"
-                                            class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
-                                            type="submit">
-                                        {{ resetPassword }}
-                                        <div class="spinner-border spinner-border-sm invisible" id="rp__spinner"
-                                             role="status"></div>
-                                    </button>
+                                <div class="form-group text-center">
+                                    <div class="col-xs-12 pb-3">
+                                        <button id="rp__reset"
+                                                class="btn btn-block btn-lg btn-info d-flex justify-content-center align-items-center"
+                                                type="submit">
+                                            {{ resetPassword }}
+                                            <div class="spinner-border spinner-border-sm invisible" id="rp__spinner"
+                                                 role="status"></div>
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
-                </div>
+                {% else %}
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center">
+                            <h5 class="font-medium mb-3">{{ noHashFound }}</h5>
+                        </div>
+                    </div>
+                {% endif %}
+
             </div>
         </div>
     </div>
