--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -49,9 +49,7 @@ body {
 
   #app-navigation {
     background-color: $keestash-theme-color-inverted;
-    height: 100%;
-    width: 260px;
-    position: absolute;
+    min-width: 260px;
 
     .ks-menu:before {
       content: "\e68e"
@@ -119,6 +117,11 @@ body {
         background-color: #f7fafc
       }
     }
+  }
+
+  #app-content {
+    width: 100%;
+    height: 100%;
   }
 }
 
