--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -1,13 +1,8 @@
-<div id="content">
+<div class="d-flex flex-row" id="content">
     {% if hasAppNavigation == true %}
         {{ appNavigation|raw }}
     {% endif %}
-    <div class="sixteen wide column">{{ appContent|raw }}</div>
-
-    {#        {% if hasBreadcrumbs == true %}#}
-    {#            <div id="breadcrumb__wrapper">#}
-    {#                {{ breadcrumbs|raw }}#}
-    {#            </div>#}
-    {#        {% endif %}#}
-    {#        {{ appContent|raw }}#}
-    {#</div>#}
+    <div class="bg-white overflow-auto" id="app-content">
+        {{ appContent|raw }}
+    </div>
+</div>
