--- a/apps/install_instance/template/frontend/has_data_dirs.twig
+++ b/apps/install_instance/template/frontend/has_data_dirs.twig
@@ -1,5 +1,5 @@
 <form id="ii__has__data__dirs__form">
-    <div class="ui container">
+    <div class="container">
         <span>{{ readableDescription }}</span>
         {% for key, value in objectData %}
             {% if key != 'size' %}
