--- a/apps/register/scss/style.scss
+++ b/apps/register/scss/style.scss
@@ -1,7 +1,7 @@
 @import "../../../lib/scss/style";
 
-.login {
-  .auth-wrapper {
+.register {
+  .register-wrapper {
     min-height: 100vh;
     position: relative;
 
@@ -9,9 +9,9 @@
       background: #fff;
       padding: 20px;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
-      max-width: 400px;
+      max-width: 800px;
       width: 90%;
-      margin: 10% 0;
+      margin: 5% 0;
 
       .logo {
         text-align: center;
@@ -23,6 +23,11 @@
       }
     }
 
+    .hidden-invalid {
+      color: $keestash-error-text-color-red;
+    }
+
   }
+
 
 }
